--- a/2023_Graduate_Project/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/Base.lproj/Main.storyboard
@@ -73,6 +73,38 @@
             </objects>
             <point key="canvasLocation" x="-852" y="654"/>
         </scene>
+        <!--홈-->
+        <scene sceneID="EtV-Jq-gCD">
+            <objects>
+                <viewController id="4BM-g1-yf4" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="Wyc-PH-STY">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="오늘의 날씨" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="Szm-wN-KWp">
+                                <rect key="frame" x="50" y="354" width="91" height="24"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="Label" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="cY6-df-ooE">
+                                <rect key="frame" x="74" y="394" width="42" height="21"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="i8S-Tl-a5v"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                    </view>
+                    <tabBarItem key="tabBarItem" title="홈" image="house.fill" catalog="system" id="jeL-0G-BVG"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="rOq-T7-sxc" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="-2171" y="-250"/>
+        </scene>
         <!--Tab Bar Controller-->
         <scene sceneID="TAK-8f-cfR">
             <objects>
@@ -84,10 +116,11 @@
                         <tabBarAppearance key="scrollEdgeAppearance" backgroundEffect="prominent"/>
                     </tabBar>
                     <connections>
-                        <segue destination="72N-KN-N1i" kind="relationship" relationship="viewControllers" id="TuG-Lw-Rhi"/>
-                        <segue destination="FLE-H6-l9p" kind="relationship" relationship="viewControllers" id="qC2-BP-2L0"/>
-                        <segue destination="YRv-78-l2V" kind="relationship" relationship="viewControllers" id="2AN-Yp-BhZ"/>
-                        <segue destination="f9K-hA-553" kind="relationship" relationship="viewControllers" id="o2c-IM-oFL"/>
+                        <segue destination="4BM-g1-yf4" kind="relationship" relationship="viewControllers" id="ZV2-IO-zJe"/>
+                        <segue destination="FLE-H6-l9p" kind="relationship" relationship="viewControllers" id="Sa6-zf-net"/>
+                        <segue destination="72N-KN-N1i" kind="relationship" relationship="viewControllers" id="yrg-Bo-2JY"/>
+                        <segue destination="YRv-78-l2V" kind="relationship" relationship="viewControllers" id="FUe-mw-IiX"/>
+                        <segue destination="f9K-hA-553" kind="relationship" relationship="viewControllers" id="Edp-mG-mJS"/>
                     </connections>
                 </tabBarController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="lao-nr-8Dl" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
@@ -97,9 +130,13 @@
     </scenes>
     <resources>
         <image name="figure.stand.line.dotted.figure.stand" catalog="system" width="128" height="82"/>
+        <image name="house.fill" catalog="system" width="128" height="104"/>
         <image name="network" catalog="system" width="128" height="123"/>
         <image name="person.fill" catalog="system" width="128" height="120"/>
         <image name="text.justify.left" catalog="system" width="128" height="99"/>
+        <systemColor name="systemBackgroundColor">
+            <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
+        </systemColor>
         <systemColor name="systemBrownColor">
             <color red="0.63529411764705879" green="0.51764705882352946" blue="0.36862745098039218" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
