--- a/2023_Graduate_Project/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/Base.lproj/Main.storyboard
@@ -111,7 +111,7 @@
                                 <rect key="frame" x="0.0" y="56" width="414" height="1293"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0RA-kL-2Es" userLabel="제일큰뷰">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="965.5"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="935.5"/>
                                         <subviews>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="k3W-3E-RTT" userLabel="상단배너뷰">
                                                 <rect key="frame" x="0.0" y="0.0" width="414" height="250"/>
@@ -180,7 +180,7 @@
                                                         <rect key="frame" x="149" y="215" width="116.5" height="26"/>
                                                     </pageControl>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemGray3Color"/>
+                                                <color key="backgroundColor" red="0.97254901960784312" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="vfe-fr-ZPh" firstAttribute="centerX" secondItem="t4Y-cd-pAV" secondAttribute="centerX" id="ADq-XW-edZ"/>
                                                     <constraint firstAttribute="height" constant="250" id="QCs-kV-qJG"/>
@@ -191,7 +191,7 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="hGJ-N0-gPs" userLabel="날씨뷰">
-                                                <rect key="frame" x="0.0" y="770" width="414" height="135.5"/>
+                                                <rect key="frame" x="0.0" y="750" width="414" height="135.5"/>
                                                 <subviews>
                                                     <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" spacing="5" translatesAutoresizingMaskIntoConstraints="NO" id="deZ-yV-dYa">
                                                         <rect key="frame" x="0.0" y="0.0" width="414" height="135.5"/>
@@ -223,7 +223,7 @@
                                                         </subviews>
                                                     </stackView>
                                                 </subviews>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <color key="backgroundColor" red="0.97254901960784312" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstItem="deZ-yV-dYa" firstAttribute="leading" secondItem="hGJ-N0-gPs" secondAttribute="leading" id="A6b-9D-7ft"/>
                                                     <constraint firstAttribute="bottom" secondItem="deZ-yV-dYa" secondAttribute="bottom" id="Mu8-jq-PqL"/>
@@ -232,11 +232,11 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="utL-fp-tB3" userLabel="하단정보뷰">
-                                                <rect key="frame" x="0.0" y="915.5" width="414" height="50"/>
+                                                <rect key="frame" x="0.0" y="885.5" width="414" height="50"/>
                                                 <subviews>
                                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="소프트웨어학과 원동현 2023학년도 졸업작품 " textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="78W-KS-RzL">
                                                         <rect key="frame" x="10" y="10" width="394" height="30"/>
-                                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
+                                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
                                                         <nil key="textColor"/>
                                                         <nil key="highlightedColor"/>
                                                     </label>
@@ -251,8 +251,8 @@
                                                 </constraints>
                                             </view>
                                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="YRU-eP-hCx" userLabel="버튼뷰들">
-                                                <rect key="frame" x="0.0" y="260" width="414" height="500"/>
-                                                <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                                                <rect key="frame" x="0.0" y="250" width="414" height="500"/>
+                                                <color key="backgroundColor" red="0.97254901960784312" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="500" id="JZE-FK-3Qf"/>
                                                 </constraints>
@@ -262,17 +262,17 @@
                                         <constraints>
                                             <constraint firstItem="k3W-3E-RTT" firstAttribute="top" secondItem="0RA-kL-2Es" secondAttribute="top" id="79O-p1-hv4"/>
                                             <constraint firstItem="YRU-eP-hCx" firstAttribute="leading" secondItem="0RA-kL-2Es" secondAttribute="leading" id="8cY-VX-tj0"/>
-                                            <constraint firstItem="YRU-eP-hCx" firstAttribute="top" secondItem="k3W-3E-RTT" secondAttribute="bottom" constant="10" id="JEx-fv-M5F"/>
+                                            <constraint firstItem="YRU-eP-hCx" firstAttribute="top" secondItem="k3W-3E-RTT" secondAttribute="bottom" id="JEx-fv-M5F"/>
                                             <constraint firstAttribute="trailing" secondItem="k3W-3E-RTT" secondAttribute="trailing" id="Q3E-pY-x26"/>
                                             <constraint firstAttribute="trailing" secondItem="hGJ-N0-gPs" secondAttribute="trailing" id="R09-V0-Vg6"/>
                                             <constraint firstItem="utL-fp-tB3" firstAttribute="leading" secondItem="0RA-kL-2Es" secondAttribute="leading" id="RIN-mJ-c1F"/>
                                             <constraint firstAttribute="trailing" secondItem="YRU-eP-hCx" secondAttribute="trailing" id="SRX-bZ-M7b"/>
                                             <constraint firstAttribute="trailing" secondItem="utL-fp-tB3" secondAttribute="trailing" id="V5e-Tw-MoT"/>
-                                            <constraint firstItem="utL-fp-tB3" firstAttribute="top" secondItem="hGJ-N0-gPs" secondAttribute="bottom" constant="10" id="Yw9-o2-Z4Z"/>
+                                            <constraint firstItem="utL-fp-tB3" firstAttribute="top" secondItem="hGJ-N0-gPs" secondAttribute="bottom" id="Yw9-o2-Z4Z"/>
                                             <constraint firstItem="k3W-3E-RTT" firstAttribute="leading" secondItem="0RA-kL-2Es" secondAttribute="leading" id="juK-y6-N54"/>
                                             <constraint firstItem="hGJ-N0-gPs" firstAttribute="leading" secondItem="0RA-kL-2Es" secondAttribute="leading" id="qd7-Pp-pEv"/>
                                             <constraint firstAttribute="bottom" secondItem="utL-fp-tB3" secondAttribute="bottom" id="qgS-ow-skw"/>
-                                            <constraint firstItem="hGJ-N0-gPs" firstAttribute="top" secondItem="YRU-eP-hCx" secondAttribute="bottom" constant="10" id="wjq-ky-cmh"/>
+                                            <constraint firstItem="hGJ-N0-gPs" firstAttribute="top" secondItem="YRU-eP-hCx" secondAttribute="bottom" id="wjq-ky-cmh"/>
                                         </constraints>
                                     </view>
                                 </subviews>
@@ -288,7 +288,7 @@
                             </scrollView>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="n3X-AO-tkl"/>
-                        <color key="backgroundColor" red="0.99999600649999998" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <color key="backgroundColor" red="0.97254901960784312" green="0.96862745098039216" blue="0.95294117647058818" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <constraints>
                             <constraint firstItem="33T-Qb-7fW" firstAttribute="top" secondItem="n3X-AO-tkl" secondAttribute="top" id="Fkn-PC-A0G"/>
                             <constraint firstItem="33T-Qb-7fW" firstAttribute="leading" secondItem="n3X-AO-tkl" secondAttribute="leading" id="JpX-xL-tgC"/>
@@ -323,9 +323,6 @@
         <image name="person" catalog="system" width="128" height="121"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
-        </systemColor>
-        <systemColor name="systemGray3Color">
-            <color red="0.7803921568627451" green="0.7803921568627451" blue="0.80000000000000004" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
