--- a/2023_Graduate_Project/Base.lproj/Main.storyboard
+++ b/2023_Graduate_Project/Base.lproj/Main.storyboard
@@ -125,7 +125,7 @@
             </objects>
             <point key="canvasLocation" x="-5367" y="240"/>
         </scene>
-        <!--이메일/비밀번호 입력하기-->
+        <!--이메일 계정 만들기-->
         <scene sceneID="Z82-AO-UYt">
             <objects>
                 <viewController id="Yga-pI-jql" customClass="EnterEmailViewController" customModule="_023_Graduate_Project" customModuleProvider="target" sceneMemberID="viewController">
@@ -134,7 +134,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" spacing="37" translatesAutoresizingMaskIntoConstraints="NO" id="PDG-Yi-IFJ">
-                                <rect key="frame" x="30" y="132" width="354" height="307"/>
+                                <rect key="frame" x="30" y="132" width="354" height="257"/>
                                 <subviews>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="이메일 주소를 입력하세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="dDq-e7-hcZ">
                                         <rect key="frame" x="0.0" y="0.0" width="354" height="20.5"/>
@@ -147,7 +147,7 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 입력하세요" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ym-cR-8rH">
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="비밀번호를 입력하세요(7자리 이상)" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="5ym-cR-8rH">
                                         <rect key="frame" x="0.0" y="128.5" width="354" height="20.5"/>
                                         <fontDescription key="fontDescription" type="boldSystem" pointSize="17"/>
                                         <nil key="textColor"/>
@@ -158,16 +158,16 @@
                                         <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                         <textInputTraits key="textInputTraits"/>
                                     </textField>
-                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0VT-ev-wIz" userLabel="ErrorLabel">
-                                        <rect key="frame" x="0.0" y="257" width="354" height="50"/>
-                                        <fontDescription key="fontDescription" type="system" pointSize="17"/>
-                                        <nil key="textColor"/>
+                                    <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="" textAlignment="center" lineBreakMode="tailTruncation" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="0VT-ev-wIz" userLabel="ErrorLabel">
+                                        <rect key="frame" x="0.0" y="257" width="354" height="0.0"/>
+                                        <fontDescription key="fontDescription" type="system" pointSize="10"/>
+                                        <color key="textColor" systemColor="systemRedColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                 </subviews>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="system" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Zqs-wo-j2w">
-                                <rect key="frame" x="157" y="469" width="100" height="60"/>
+                                <rect key="frame" x="157" y="419" width="100" height="60"/>
                                 <color key="backgroundColor" red="0.80366471520000005" green="0.94074213500000003" blue="0.86490849759999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="XII-6Z-CxH"/>
@@ -178,7 +178,6 @@
                                 <buttonConfiguration key="configuration" style="plain" title="다음"/>
                                 <connections>
                                     <action selector="nextButtonTabbed:" destination="Yga-pI-jql" eventType="touchUpInside" id="Sjj-k5-R8r"/>
-                                    <segue destination="Amd-7e-c1f" kind="show" id="eyW-Cb-0eB"/>
                                 </connections>
                             </button>
                         </subviews>
@@ -192,7 +191,7 @@
                             <constraint firstItem="Zqs-wo-j2w" firstAttribute="centerX" secondItem="Lfy-3r-nFD" secondAttribute="centerX" id="xxf-8d-M3V"/>
                         </constraints>
                     </view>
-                    <navigationItem key="navigationItem" title="이메일/비밀번호 입력하기" id="vlc-lm-BT7"/>
+                    <navigationItem key="navigationItem" title="이메일 계정 만들기" id="vlc-lm-BT7"/>
                     <connections>
                         <outlet property="emailTextField" destination="QIM-YX-QSb" id="f3t-5l-WU5"/>
                         <outlet property="errorLabel" destination="0VT-ev-wIz" id="T2B-92-sn9"/>
@@ -244,21 +243,37 @@
             </objects>
             <point key="canvasLocation" x="-2041" y="250"/>
         </scene>
-        <!--View Controller-->
+        <!--My Information View Controller-->
         <scene sceneID="JDD-fu-fYy">
             <objects>
-                <viewController modalPresentationStyle="fullScreen" id="zAF-jF-Mfv" sceneMemberID="viewController">
+                <viewController storyboardIdentifier="MyInformationViewController" modalPresentationStyle="fullScreen" id="zAF-jF-Mfv" customClass="MyInformationViewController" customModule="_023_Graduate_Project" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="Jva-YI-a5I">
                         <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="USERNAME 님 환영합니다 !" textAlignment="center" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="VUT-mC-EPC">
+                                <rect key="frame" x="20" y="50" width="374" height="24"/>
+                                <fontDescription key="fontDescription" type="boldSystem" pointSize="20"/>
+                                <nil key="textColor"/>
+                                <nil key="highlightedColor"/>
+                            </label>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="JIw-ZM-60q"/>
                         <color key="backgroundColor" red="0.97254901959999995" green="0.96862745100000003" blue="0.95294117649999999" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+                        <constraints>
+                            <constraint firstItem="JIw-ZM-60q" firstAttribute="trailing" secondItem="VUT-mC-EPC" secondAttribute="trailing" constant="20" id="XTK-yh-MSD"/>
+                            <constraint firstItem="VUT-mC-EPC" firstAttribute="leading" secondItem="JIw-ZM-60q" secondAttribute="leading" constant="20" id="cN5-jV-L1q"/>
+                            <constraint firstItem="VUT-mC-EPC" firstAttribute="top" secondItem="JIw-ZM-60q" secondAttribute="top" constant="50" id="gA3-y1-2eM"/>
+                        </constraints>
                     </view>
                     <navigationItem key="navigationItem" id="bEk-sk-sbP"/>
+                    <connections>
+                        <outlet property="userNameLabel" destination="VUT-mC-EPC" id="b4N-zB-gnf"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="v5b-U8-XJt" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-2084" y="-536"/>
+            <point key="canvasLocation" x="-2580" y="-664"/>
         </scene>
         <!--도와줘요 맥가이버-->
         <scene sceneID="TyB-Vu-27q">
@@ -269,7 +284,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <scrollView clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="33T-Qb-7fW">
-                                <rect key="frame" x="0.0" y="92" width="414" height="1267"/>
+                                <rect key="frame" x="0.0" y="48" width="414" height="1311"/>
                                 <subviews>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="0RA-kL-2Es" userLabel="제일큰뷰">
                                         <rect key="frame" x="0.0" y="0.0" width="414" height="685.5"/>
@@ -564,6 +579,9 @@
         </systemColor>
         <systemColor name="systemGray6Color">
             <color red="0.94901960784313721" green="0.94901960784313721" blue="0.96862745098039216" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
+        </systemColor>
+        <systemColor name="systemRedColor">
+            <color red="1" green="0.23137254901960785" blue="0.18823529411764706" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
         </systemColor>
     </resources>
 </document>
